...
}

- (void)awakeFromNib
{
	[super awakeFromNib];
	window.contentView = self.view;
	sourceView.accessibilityIdentifier = @"RepositorySidebar";
	[self populateList];

	PBGitRepository *repository = self.repository;
	self.lastKnownHeadRef = repository.headRef;

	[repository addObserver:self
...
